# chess-coach-agent-bot

./: README.md
app/: README.md  REFLECTION.md  example.env  pyproject.toml
app/src/: main.py
app/src/agent/: agent.py  prompts.py  schemas.py
app/src/bot/: handlers.py
app/src/contracts/: tool_results.py
app/src/core/: config.py
app/src/tools/: opening_stats.py  video_search.py  web_search.py
