[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "leanleanlean96",email = "kiraaff2289@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13, <3.15"
dependencies = [
    "pydantic (>=2.4.1,<2.13)",
    "aiogram (>=3.27.0,<4.0.0)",
    "openai (>=2.32.0,<3.0.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
    "tavily-python (>=0.7.23,<0.8.0)"
]

[tool.poetry]
packages = [{include = "src", from = "src"}]


[tool.poetry.group.dev.dependencies]
ruff = "^0.15.12"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]